Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-10758

QStyleFactory::create ("gtk+") Seg fault

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.7.0
    • 4.6.2
    • GUI: Look'n'Feel
    • None
    • fedora 12 and fedora 13
    • bc5e4da28c1ffbc0da1cbfcaa1e6236ff4c2d4e3

    Description

      QStyle *pst = QStyleFactory::create ("gtk+")
      will result in a Segmentation fault in this example program:

      #include <QStyleFactory>
      int main (int argc, char *argv[])
      {
        QStyle *pst = QStyleFactory::create ("gtk+");
      }
      

      see attached typescript

      "gtk+" is one of the available styles according to QStyleFactory::keys()

      all other styles work fine with QApplication::setStyle
      non-existent styles are handled properly, QStyleFactory::create("no-such-style")
      returns 0 as expected

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            bachewii Jens
            berndhs Bernd Stramm
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes