Fixed a crash when creating QGtkStyle before QApplication

Task-number: QTBUG-10758
Reviewed-by: ogoffart
(cherry picked from commit bc5e4da28c1ffbc0da1cbfcaa1e6236ff4c2d4e3)