src/gui/styles/qgtkstyle_p.cpp
@@ -278,8 +278,6 @@ void QGtkStylePrivate::init()
 {
     resolveGtk();
     initGtkWidgets();
-    if (isThemeAvailable())
-        qApp->installEventFilter(&filter);
 }
 
 GtkWidget* QGtkStylePrivate::gtkWidget(const QString &path)
